<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.fried.sukkahhillspirits.Prices">

    <TextView
        android:id="@+id/txtPriceTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/txtPriceTitle"
        android:textColor="@android:color/background_light"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.098" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPriceTitle"
        app:layout_constraintVertical_bias="0.126">

        <RadioButton
            android:id="@+id/radEtrog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/radEtrog"
            android:textSize="30sp" />

        <RadioButton
            android:id="@+id/radBesamim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radBesamim"
            android:textSize="30sp" />

        <RadioButton
            android:id="@+id/radCali"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radCali"
            android:textSize="30sp" />
    </RadioGroup>

    <Spinner
        android:id="@+id/txtAmount"
        style="@style/Widget.AppCompat.Spinner.DropDown"
        android:layout_width="344dp"
        android:layout_height="21dp"
        android:background="@color/colorAccent"
        android:entries="@array/txtAmount"
        android:gravity="center_horizontal"
        android:prompt="@string/prompt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintVertical_bias="0.13" />

    <TextView
        android:id="@+id/txtPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/background_light"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.92" />

    <Button
        android:id="@+id/btnCalc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnCalc"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAmount"
        app:layout_constraintVertical_bias="0.19999999" />
</android.support.constraint.ConstraintLayout>
